force-app/main/default/objects/Credit_Assessment__c/Credit_Assessment__c.object-meta.xml
<CustomObject>
    <description>Stores credit bureau assessment results for a loan application. Captures credit score, risk grade, bureau reference, and analyst review decisions.</description>
    <label>Credit Assessment</label>
    <nameField>
        <displayFormat>CA-{YYYY}-{000000}</displayFormat>
        <label>Assessment Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>