force-app/main/default/objects/Credit_Assessment__c/fields/Analyst_Decision__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Decision__c</fullName>
    <label>Analyst Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>