force-app/main/default/objects/Credit_Assessment__c/fields/Analyst_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Remarks__c</fullName>
    <label>Analyst Remarks</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>