force-app/main/default/objects/Credit_Assessment__c/fields/Bureau_Reference__c.field-meta.xml
<CustomField>
    <fullName>Bureau_Reference__c</fullName>
    <label>Bureau Reference</label>
    <type>Text</type>
    <length>255</length>
</CustomField>