force-app/main/default/objects/Credit_Assessment__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <label>Loan Application</label>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Credit Assessments</relationshipLabel>
    <relationshipName>Credit_Assessments</relationshipName>
</CustomField>