force-app/main/default/objects/Credit_Assessment__c/fields/Overdue_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Accounts__c</fullName>
    <label>Overdue Accounts</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>