force-app/main/default/objects/Credit_Assessment__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <label>Reviewed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Credit Reviews</relationshipLabel>
    <relationshipName>Credit_Reviews</relationshipName>
</CustomField>