force-app/main/default/objects/Credit_Assessment__c/fields/Score_Pull_Date__c.field-meta.xml
<CustomField>
    <fullName>Score_Pull_Date__c</fullName>
    <label>Score Pull Date</label>
    <type>DateTime</type>
</CustomField>