force-app/main/default/objects/Credit_Assessment__c/fields/Total_Active_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Accounts__c</fullName>
    <label>Total Active Accounts</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>